tests/neg-custom-args/captures/filevar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/filevar.scala:15:12 --------------------------------------
15 |  withFile: f =>       // error with level checking, was OK under both schemes before
   |            ^
   |Found:    (l: scala.caps.Capability^) ?->'s1 File^'s2 ->'s3 Unit
   |Required: (l: scala.caps.Capability^) ?-> (f: File^{l}) => Unit
   |
   |Note that capability l cannot be included in outer capture set 's4 of parameter f.
   |
   |where:    => refers to a root capability associated with the result type of (using l: scala.caps.Capability^): (f: File^{l}) => Unit
   |          ^  refers to the universal root capability
16 |    val o = Service()
17 |    o.file = f
18 |    o.log
   |
   | longer explanation available when compiling with `-explain`
